# iris

./: .gitignore  CMakeLists.txt  IRIS.md  IRISH.md  IRSH.md  LICENSE  PIPE.md  README.md  ROADMAP.md  WHY.md  flake.nix
.github/workflows/: ci.yml  release.yml
cmake/: IrisConfig.cmake.in
docs/: getting-started.md
docs/contracts/: backend-abi.md  irgen-contract.md  plugin-lifecycle.md  type-registry-freeze.md
examples/: CMakeLists.txt
examples/demo/: setup.sh  the-bash-way.sh  the-irsh-way.irsh
examples/worker/: CMakeLists.txt
include/: backend.hpp  channel.hpp  execution.hpp  fn_backend.hpp  iris_backend_handle.h  os.hpp  os_backend.hpp  registry.hpp  runtime_manager.hpp  sdk.hpp  types.hpp  value.hpp
include/backend/: fn.hpp  ipc.hpp  os.hpp  runtime.hpp
sdk/: LICENSE  iris.hpp  iris_backend.h  iris_registry.h  irsh_backend.h  macros.hpp  types.hpp
sdk/cpp/: backend.hpp  iris.hpp  irsh_backend.hpp  macros.hpp  os.hpp  reflect.hpp  types.hpp
sdk/py/: iris.py
src/: iris_backend_handle.cpp  registry.cpp
src/backend/ipc/: ipc.cpp
src/backend/java/: java_backend.cpp  java_backend.hpp
src/backend/os/: env.cpp  ls.cpp  ps.cpp
src/irish/: main.cpp
src/irish/backend/: backend_registry.hpp  base_irsh.cpp  base_irsh.hpp  ipc_irsh.cpp  ipc_irsh.hpp  os_irsh.cpp  os_irsh.hpp  plugin_loader.cpp  plugin_loader.hpp
src/irish/checker/: checker.cpp  checker.hpp  irtype.hpp
src/irish/exec/: eval.cpp  eval.hpp  executor.cpp  executor.hpp
src/irish/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/irish/parser/: ast.hpp  import_table.hpp  parser.cpp  parser.hpp
src/irish/session/: session.cpp  session.hpp
src/os/: env.cpp  ls.cpp  ps.cpp
tests/: fuzz_irsh.cpp  test_channel.cpp  test_checker.cpp  test_execution.cpp  test_fn_backend.cpp  test_inspection.cpp  test_ipc_backend.cpp  test_iris_handle.cpp  test_java_backend.cpp  test_lexer.cpp  test_os.cpp  test_parser.cpp  test_reflection.cpp  test_registry.cpp  test_runtime_manager.cpp
